@@ -3,6 +3,7 @@ Version 0.4.0-dev
 - marked class Generator as final
 - files to process are now stored in publicly readable property Generator::$filesToProcess
 - links to other .md files in sources are updated to link to generated .html pages
+- made it possible to change list of ignored files and folders
 
 Version 0.3.0
 - raised minimal version of PHP to 7.1
